// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/badge/demo/basic.md correctly 1`] = `
<div>
  <span
    class="ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="ant-scroll-number ant-badge-count"
      data-show="true"
      title="5"
    >
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class="current"
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
  <span
    class="ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="ant-scroll-number ant-badge-count"
      data-show="true"
      title="0"
    >
      0
    </sup>
  </span>
</div>
`;

exports[`renders ./components/badge/demo/change.md correctly 1`] = `
<div>
  <div>
    <span
      class="ant-badge"
    >
      <a
        class="head-example"
        href="#"
      />
      <sup
        class="ant-scroll-number ant-badge-count"
        data-show="true"
        title="5"
      >
        <span
          class="ant-scroll-number-only"
          style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
        >
          <p
            class=""
          >
            0
          </p>
          <p
            class=""
          >
            1
          </p>
          <p
            class=""
          >
            2
          </p>
          <p
            class=""
          >
            3
          </p>
          <p
            class=""
          >
            4
          </p>
          <p
            class=""
          >
            5
          </p>
          <p
            class=""
          >
            6
          </p>
          <p
            class=""
          >
            7
          </p>
          <p
            class=""
          >
            8
          </p>
          <p
            class=""
          >
            9
          </p>
          <p
            class=""
          >
            0
          </p>
          <p
            class=""
          >
            1
          </p>
          <p
            class=""
          >
            2
          </p>
          <p
            class=""
          >
            3
          </p>
          <p
            class=""
          >
            4
          </p>
          <p
            class="current"
          >
            5
          </p>
          <p
            class=""
          >
            6
          </p>
          <p
            class=""
          >
            7
          </p>
          <p
            class=""
          >
            8
          </p>
          <p
            class=""
          >
            9
          </p>
          <p
            class=""
          >
            0
          </p>
          <p
            class=""
          >
            1
          </p>
          <p
            class=""
          >
            2
          </p>
          <p
            class=""
          >
            3
          </p>
          <p
            class=""
          >
            4
          </p>
          <p
            class=""
          >
            5
          </p>
          <p
            class=""
          >
            6
          </p>
          <p
            class=""
          >
            7
          </p>
          <p
            class=""
          >
            8
          </p>
          <p
            class=""
          >
            9
          </p>
        </span>
      </sup>
    </span>
    <div
      class="ant-btn-group"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <i
          class="anticon anticon-minus"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="minus"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M796.5 548h-569c-19.9 0-36-16.1-36-36s16.1-36 36-36h569c19.9 0 36 16.1 36 36s-16.1 36-36 36z"
            />
          </svg>
        </i>
      </button>
      <button
        class="ant-btn"
        type="button"
      >
        <i
          class="anticon anticon-plus"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="plus"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M866.5 476H548V165.5c0-19.9-16.1-36-36-36s-36 16.1-36 36V476H164.5c-19.9 0-36 16.1-36 36s16.1 36 36 36H476v311.5c0 19.9 16.1 36 36 36s36-16.1 36-36V548h318.5c19.9 0 36-16.1 36-36s-16.1-36-36-36z"
            />
          </svg>
        </i>
      </button>
    </div>
  </div>
  <div
    style="margin-top:10px"
  >
    <span
      class="ant-badge"
    >
      <a
        class="head-example"
        href="#"
      />
      <sup
        class="ant-scroll-number ant-badge-dot"
        data-show="true"
      />
    </span>
    <span
      checked=""
      class="ant-switch ant-switch-checked"
      tabindex="0"
    >
      <span
        class="ant-switch-inner"
      />
    </span>
  </div>
</div>
`;

exports[`renders ./components/badge/demo/dot.md correctly 1`] = `
<div>
  <span
    class="ant-badge"
  >
    <i
      class="anticon anticon-notification"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="notification"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M922 377.7h-57.3v-17.6c0-27-21.3-49-47.4-49H645c-7.2-13.8-18-23.8-32.8-23.8-251.2 0-476.9-217.6-476.9-217.6C128 65.8 120.4 64 113 64c-24.7 0-47.2 19.8-47.2 47.2v801.1c0 27.6 22.6 47.2 47.2 47.2 8 0 16.3-2.1 24-6.7 0 0 208.5-260.4 478.1-260.4 13.8 0 23.7-9.3 30.3-22.2h4.1c1.4 60.3-12.7 124.5-25.8 170.8-7.6 26.9 3 55.2 26.4 70.5 10.6 6.9 22.7 10.4 34.7 10.4 14.4 0 28.7-5 40.5-14.7 69.2-57.5 95.1-123.6 104.7-168.9 6-28.3 6.5-52.2 5.8-68 3.6-4.6 7-9.6 10.3-14.6 18.7-28.7 18.7-39.8 18.7-45.1V588H922c19.9 0 36-16.1 36-36V413.7c0-19.9-16.1-36-36-36zM584.2 621.4c-61.3 3.9-123.6 19.1-185.7 45.4-56.3 23.9-112.5 57-167.1 98.4-37.6 28.5-69.2 57-93.7 81V166.6c26.4 21 61.8 47.1 103.8 73.1 55.2 34.2 110.9 61.6 165.6 81.3 60.2 21.7 119.4 34.3 176.4 37.5v1.7c0 2.3.2 4.5.6 6.6v253.5c.1.4.1.7.1 1.1zm208.5-16.8c-3.1 6.1-9.6 16.1-13.5 21.1-3.2 2-6.1 4.5-8.5 7.4-6.8 8.2-9.7 19-7.8 29.5 0 .2 4.1 25.8-3.3 60.8-8.6 40.8-28.4 77.2-58.9 108.6 14.5-58.5 26.7-133.7 18.1-202.3-2.3-18-17.6-31.5-35.7-31.5h-25.6v-29.9c0-3.3-.5-6.5-1.3-9.5V383.1h136.5v221.5zM886 516h-21.3v-66.3H886V516z"
        />
      </svg>
    </i>
    <sup
      class="ant-scroll-number ant-badge-dot"
      data-show="true"
    />
  </span>
  <span
    class="ant-badge"
  >
    <i
      class="anticon anticon-notification"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="notification"
        fill="currentColor"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M922 377.7h-57.3v-17.6c0-27-21.3-49-47.4-49H645c-7.2-13.8-18-23.8-32.8-23.8-251.2 0-476.9-217.6-476.9-217.6C128 65.8 120.4 64 113 64c-24.7 0-47.2 19.8-47.2 47.2v801.1c0 27.6 22.6 47.2 47.2 47.2 8 0 16.3-2.1 24-6.7 0 0 208.5-260.4 478.1-260.4 13.8 0 23.7-9.3 30.3-22.2h4.1c1.4 60.3-12.7 124.5-25.8 170.8-7.6 26.9 3 55.2 26.4 70.5 10.6 6.9 22.7 10.4 34.7 10.4 14.4 0 28.7-5 40.5-14.7 69.2-57.5 95.1-123.6 104.7-168.9 6-28.3 6.5-52.2 5.8-68 3.6-4.6 7-9.6 10.3-14.6 18.7-28.7 18.7-39.8 18.7-45.1V588H922c19.9 0 36-16.1 36-36V413.7c0-19.9-16.1-36-36-36zM584.2 621.4c-61.3 3.9-123.6 19.1-185.7 45.4-56.3 23.9-112.5 57-167.1 98.4-37.6 28.5-69.2 57-93.7 81V166.6c26.4 21 61.8 47.1 103.8 73.1 55.2 34.2 110.9 61.6 165.6 81.3 60.2 21.7 119.4 34.3 176.4 37.5v1.7c0 2.3.2 4.5.6 6.6v253.5c.1.4.1.7.1 1.1zm208.5-16.8c-3.1 6.1-9.6 16.1-13.5 21.1-3.2 2-6.1 4.5-8.5 7.4-6.8 8.2-9.7 19-7.8 29.5 0 .2 4.1 25.8-3.3 60.8-8.6 40.8-28.4 77.2-58.9 108.6 14.5-58.5 26.7-133.7 18.1-202.3-2.3-18-17.6-31.5-35.7-31.5h-25.6v-29.9c0-3.3-.5-6.5-1.3-9.5V383.1h136.5v221.5zM886 516h-21.3v-66.3H886V516z"
        />
      </svg>
    </i>
  </span>
  <span
    class="ant-badge"
  >
    <a
      href="#"
    >
      Link something
    </a>
    <sup
      class="ant-scroll-number ant-badge-dot"
      data-show="true"
    />
  </span>
</div>
`;

exports[`renders ./components/badge/demo/link.md correctly 1`] = `
<a
  href="#"
>
  <span
    class="ant-badge"
  >
    <span
      class="head-example"
    />
    <sup
      class="ant-scroll-number ant-badge-count"
      data-show="true"
      title="5"
    >
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class="current"
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
</a>
`;

exports[`renders ./components/badge/demo/no-wrapper.md correctly 1`] = `
<div>
  <span
    class="ant-badge ant-badge-not-a-wrapper"
  >
    <sup
      class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
      data-show="true"
      title="25"
    >
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1200%);-webkit-transform:translateY(-1200%);transform:translateY(-1200%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class="current"
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class="current"
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
  <span
    class="ant-badge ant-badge-not-a-wrapper"
  >
    <sup
      class="ant-scroll-number ant-badge-count"
      data-show="true"
      style="background-color:#fff;color:#999;box-shadow:0 0 0 1px #d9d9d9 inset"
      title="4"
    >
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1400%);-webkit-transform:translateY(-1400%);transform:translateY(-1400%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class="current"
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
  <span
    class="ant-badge ant-badge-not-a-wrapper"
  >
    <sup
      class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
      data-show="true"
      style="background-color:#52c41a"
      title="109"
    >
      99+
    </sup>
  </span>
</div>
`;

exports[`renders ./components/badge/demo/overflow.md correctly 1`] = `
<div>
  <span
    class="ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
      data-show="true"
      title="99"
    >
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1900%);-webkit-transform:translateY(-1900%);transform:translateY(-1900%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class="current"
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1900%);-webkit-transform:translateY(-1900%);transform:translateY(-1900%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class="current"
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
  <span
    class="ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
      data-show="true"
      title="100"
    >
      99+
    </sup>
  </span>
  <span
    class="ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
      data-show="true"
      title="99"
    >
      10+
    </sup>
  </span>
  <span
    class="ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="ant-scroll-number ant-badge-count ant-badge-multiple-words"
      data-show="true"
      title="1000"
    >
      999+
    </sup>
  </span>
</div>
`;

exports[`renders ./components/badge/demo/status.md correctly 1`] = `
<div>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-success"
    />
    <span
      class="ant-badge-status-text"
    />
  </span>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-error"
    />
    <span
      class="ant-badge-status-text"
    />
  </span>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-default"
    />
    <span
      class="ant-badge-status-text"
    />
  </span>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-processing"
    />
    <span
      class="ant-badge-status-text"
    />
  </span>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-warning"
    />
    <span
      class="ant-badge-status-text"
    />
  </span>
  <br />
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-success"
    />
    <span
      class="ant-badge-status-text"
    >
      Success
    </span>
  </span>
  <br />
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-error"
    />
    <span
      class="ant-badge-status-text"
    >
      Error
    </span>
  </span>
  <br />
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-default"
    />
    <span
      class="ant-badge-status-text"
    >
      Default
    </span>
  </span>
  <br />
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-processing"
    />
    <span
      class="ant-badge-status-text"
    >
      Processing
    </span>
  </span>
  <br />
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-warning"
    />
    <span
      class="ant-badge-status-text"
    >
      Warning
    </span>
  </span>
</div>
`;

exports[`renders ./components/badge/demo/title.md correctly 1`] = `
<div>
  <span
    class="ant-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="ant-scroll-number ant-badge-count"
      data-show="true"
      title="Custom hover text"
    >
      <span
        class="ant-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class="current"
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
</div>
`;
